--- a/src/components/modals/SecModal.modules.css
+++ b/src/components/modals/SecModal.modules.css
@@ -15,7 +15,8 @@
   margin: 4% auto;
   padding: 3px;
   border: 1px solid #000000;
-  width: 1228px;
+  width: 50%;
+  height: 823px;
 }
 
 .modal-header {
